tests/__snapshots__/config-checkSuppressedErrors-enabled-stderr.snap.txt
Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

  1 | // @ts-expect-error
    |    ~~~~~~~~~~~~~~~~
  2 | console.log(add);
  3 | 
  4 | // @ts-expect-error Does not work

      at ./__typetests__/sample.tst.ts:1:4

    The suppressed error:

    Cannot find name 'add'. ts(2304)

      1 | // @ts-expect-error
      2 | console.log(add);
        |             ~~~
      3 | 
      4 | // @ts-expect-error Does not work
      5 | console.log(add);

          at ./__typetests__/sample.tst.ts:2:13

Error: The diagnostic message did not match.

  2 | console.log(add);
  3 | 
  4 | // @ts-expect-error Does not work
    |                     ~~~~~~~~~~~~~
  5 | console.log(add);
  6 | 
  7 | // @ts-expect-error Cannot find name 'add'

      at ./__typetests__/sample.tst.ts:4:21

    The suppressed error:

    Cannot find name 'add'. ts(2304)

      3 | 
      4 | // @ts-expect-error Does not work
      5 | console.log(add);
        |             ~~~
      6 | 
      7 | // @ts-expect-error Cannot find name 'add'
      8 | console.log(add);

          at ./__typetests__/sample.tst.ts:5:13

Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

   8 | console.log(add);
   9 | 
  10 | /* @ts-expect-error */
     |    ~~~~~~~~~~~~~~~~
  11 | console.log(add);
  12 | 
  13 | /* @ts-expect-error Does not work */

       at ./__typetests__/sample.tst.ts:10:4

    The suppressed error:

    Cannot find name 'add'. ts(2304)

       9 | 
      10 | /* @ts-expect-error */
      11 | console.log(add);
         |             ~~~
      12 | 
      13 | /* @ts-expect-error Does not work */
      14 | console.log(add);

           at ./__typetests__/sample.tst.ts:11:13

Error: The diagnostic message did not match.

  11 | console.log(add);
  12 | 
  13 | /* @ts-expect-error Does not work */
     |                     ~~~~~~~~~~~~~
  14 | console.log(add);
  15 | 
  16 | /* @ts-expect-error Cannot find name 'add' */

       at ./__typetests__/sample.tst.ts:13:21

    The suppressed error:

    Cannot find name 'add'. ts(2304)

      12 | 
      13 | /* @ts-expect-error Does not work */
      14 | console.log(add);
         |             ~~~
      15 | 
      16 | /* @ts-expect-error Cannot find name 'add' */
      17 | console.log(add);

           at ./__typetests__/sample.tst.ts:14:13

